@@ -84,6 +84,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_AllelePairCheck.sql.rpt">Genotypes where Allele Pairs are associated with different Markers</A
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_UncodedReference.rpt">Alleles with most uncoded references</A
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_NoPhenoRef.rpt">Alleles with no phenotype but have additional references</A
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_TransgeneDiff.sql.rpt">Approved Transgenes with Name/Symbol Differences</A
 <LI><A HREF="http://aretha.jax.org/jax/tbase">TBASE</A>
 </OL>
 
@@ -181,6 +182,8 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_AssayInCacheNotInIndex.rpt">Full coded assays that were not indexed</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_AssayInIndexNotInCache.rpt">Full coded references that contain indexed assays that have not been full coded</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_GelBand.sql.rpt">GXD Blot w/ Control = No and Strength = Not Applicable</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecNoImage.sql.rpt">Specimen Results with Incomplete Image Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecImageDiffFigure.sql.rpt">Specimen Results with Image Annotations and Different Figures</A>
 <LI><A HREF="/data/reports/qcreports_db/archive/gxd">Archived GXD Reports</A>
 </OL>
 
@@ -303,6 +306,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/MGI_ENSEMBL_Associations.rpt">Ensembl Associations</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MGI_VEGA_Associations.rpt">VEGA Associations</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MGI_NCBI_Associations.rpt">NCBI Associations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_GmNoGeneModel.sql.rpt">Gm Markers without Gene Model Associations</A>
 </OL>
 
 <A NAME="sequence"><B>Sequences</B></A>
